reports/BasicPython/09_Exception.err.log
Traceback (most recent call last):
  File "C:\Users\AhmadYazidMunif\AppData\Local\Programs\Python\Python311\Lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\Users\AhmadYazidMunif\AppData\Local\Programs\Python\Python311\Lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\AhmadYazidMunif\AppData\Local\Programs\Python\Python311\Lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\AhmadYazidMunif\AppData\Local\Programs\Python\Python311\Lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\AhmadYazidMunif\AppData\Local\Programs\Python\Python311\Lib\asyncio\base_events.py", line 650, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "C:\Users\AhmadYazidMunif\AppData\Local\Programs\Python\Python311\Lib\contextlib.py", line 222, in __aexit__
    await self.gen.athrow(typ, value, traceback)
  File "C:\Users\AhmadYazidMunif\AppData\Local\Programs\Python\Python311\Lib\site-packages\nbclient\client.py", line 608, in async_setup_kernel
    yield
  File "C:\Users\AhmadYazidMunif\AppData\Local\Programs\Python\Python311\Lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\AhmadYazidMunif\AppData\Local\Programs\Python\Python311\Lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\AhmadYazidMunif\AppData\Local\Programs\Python\Python311\Lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
#syntax error
excuse = 'I'm sick'
------------------

[1;36m  File [1;32m"C:\Users\AhmadYazidMunif\AppData\Local\Temp\ipykernel_3308\3952319862.py"[1;36m, line [1;32m2[0m
[1;33m    excuse = 'I'm sick'[0m
[1;37m                      ^[0m
[1;31mSyntaxError[0m[1;31m:[0m unterminated string literal (detected at line 2)

SyntaxError: unterminated string literal (detected at line 2) (3952319862.py, line 2)

